<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Contact</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="view_profile">View profile</string>
    <string name="edit_profile">Edit profile</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="submit">Submit</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="search">Search</string>

</resources>
